Fix entry meta spacing

--- a/assets/css/mai-pro.css
+++ b/assets/css/mai-pro.css
@@ -3228,7 +3228,7 @@ p.entry-meta {
 .entry-comments-link a,
 .post-edit-link,
 .post-edit-link a {
-	margin-right: 6px;
+	margin-right: 4px;
 }
 
 .entry-categories,
